[package]
name = "cl-text-layout"
version = "0.1.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
license = "MPL-2.0"
description = '''
    Text layout algorithms
'''
repository = "https://github.com/conradludgate/azul"
edition = "2021"

[dependencies]
unicode-normalization   = { version = "0.1.21",  default-features = false }
allsorts                = { version = "0.14.0", default-features = false, features = ["flate2_rust"] }
# tinyvec                 = { version = "1.6.0", default-features = false }
ttf-parser              = { version = "0.18.1", default-features = false, features = ["variable-fonts"] }
